--- a/my_functions.ipynb
+++ b/my_functions.ipynb
@@ -2,12 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "given-hurricane",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import spacy as sp\n",
-    "import sys as sklearn"
+    "# SENTENCE SPLITTING FUNCTION\n",
+    "def sentence_splitting(doc):\n",
+    "    doc = nlp_sentencizer(doc['text'])\n",
+    "    sentences = [sent.string.strip() for sent in doc.sents]\n",
+    "    \n",
+    "    return sentences"
    ]
   }
  ],
@@ -27,9 +32,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
